# BLOCON

./: .gitignore  pytest.ini  requeriments.txt  run.bat
app/: .env.example  api_server.py  main_gui.py  run_server.py
app/assets/: gate_types.json  unit_types.json
app/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
app/desktop/src/: App.tsx  main.tsx  styles.css
app/desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/desktop/src-tauri/src/: config.rs  main.rs
app/desktop/src/api/: backend.ts
app/desktop/src/components/: ConfigWizard.tsx  DebugConfig.tsx
app/desktop/src/core/: graph.ts
app/desktop/src/services/: apiClient.ts  appLogger.ts  cloudErrorStore.ts  cloudErrors.ts  diagramViewService.ts  draftService.ts  evaluateApi.ts  eventHistoryService.ts  eventSearchService.ts  failuresApi.ts  globalViewService.ts  graphRequestQueue.ts  graphService.ts  localDirtyService.ts  nodeDetailsApi.ts  nodeEditApi.ts  versionViewerService.ts  viewsService.ts
app/src/: __init__.py
app/src/domain/eventsourcing/: events.py  ports.py
app/src/domain/graph/: evaluator.py  graph.py  validator.py
app/src/model/: failure.py
app/src/model/eventsourcing/: events.py  in_memory_store.py  service.py
app/src/model/failure/: failure.py  ports.py
app/src/model/graph/: dist.py  graph.py  (+4 more)
app/src/services/: evaluation.py  failure.py
app/src/ui/: gui.py
scripts/: api_search_test.py  build_backend.ps1  build_backend.sh  build_desktop.ps1  build_desktop.sh  imports_tests.py  update_components.py  update_failures.py  verify_bundle.ps1  verify_bundle.sh
(+222 files in other folders)
