[package]
name = "blocon-desktop"
version = "0.1.0"
description = "BLOCON Desktop"
authors = ["benjaminMancilla"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.2" }

[dependencies]
tauri = { version = "1.5.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]