[package]
name = "blocon-desktop"
version = "0.1.0"
description = "BLOCON Desktop"
authors = ["benjaminMancilla"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "window-close", "shell-open", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["dpapi", "wincrypt", "winbase"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
